# OptiqMTPMLX

./: .gitignore  ARCHITECTURE_MERGE.md  DECISIONS.md  EXPANSION_PLAN.md  PROGRESS.md  README.md  pyproject.toml  run.sh
.grok/hooks/: pre-effect.sh
docs/: grok_in_loop_demo_video_script.md  index.html
docs/showpiece/: optiq-mtp-mlx.md
nex/: __init__.py  __main__.py  agent.py  cli.py  config.py  engine.py  grok_escalator.py  history_rag.py  mcp.py  mcp_cortex_adapter.py  models.py  persistence.py  render.py  server.py  session.py  theme.py  tools.py  tui.py
nex/sentinel/: enforcer.py  grok_auditor.py  policy.py  pty_runner.py  trace_viewer.py
plugins/: example_calculator.py
scripts/: grok_claude.py  grok_codex.py  grok_in_loop_demo.py  grokkasclate_showpiece.py  hardened_supervision_showpiece.py
